--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ python:
     - "3.4"
     - "3.5"
 install:
-    - pip install --only-binary=numpy,scipy numpy scipy
+    - "pip install --only-binary :all: numpy scipy"
 script:
     - py.test
