--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
     - "3.4"
     - "3.5"
 install:
+    - "pip install -U pip wheel"
     - "pip install --only-binary :all: numpy scipy"
 script:
     - py.test
