--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
     - "3.4"
     - "3.5"
 install:
-    - "pip install -U pip wheel"
+    - "pip install -U pip"
     - "pip install --only-binary :all: numpy scipy"
 script:
     - py.test
